syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.logicserver.protobuf";

message LoginCreateObject {
    string Username = 1;
    bytes Password = 2;
    bytes Salt = 3;
}

message MemberObj {
    int32 Id = 1;
    string Username = 2;
    bytes Password = 3;
    bytes Salt = 4;
    string Position = 5;
}

service MemberService {
    rpc createMember(LoginCreateObject) returns(MemberObj);
    rpc loginMember(LoginCreateObject) returns(MemberObj);
}